logs/Slang/generated/keywords/5.6.2--keyword_export.sv.log
name: keyword_export
description: The 'export' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_export.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_export.sv:8:8: error: expected declarator
    bit export;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_export.sv:8:9: error: language feature not yet supported
    bit export;
        ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_export.sv:8:15: error: expected string literal
    bit export;
              ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_export.sv:8:15: error: expected 'function'
    bit export;
              ^
